[package]
name = "server-kit"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.21"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
time = { version = "0.3.9", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
    "time",
] }
