[package]
name = "server-kit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
dotenv = "0.15.0"
futures-util = "0.3.21"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
serde = "1.0.137"
serde_derive = "1.0.137"
thiserror = "1.0.31"
time = { version = "0.3.9", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.5.9"
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
    "time",
] }
