[package]
name = "server-kit"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
bytes = "1.1.0"
dotenv = "0.15"
futures-util = "0.3"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
serde = "1"
serde_derive = "1"
thiserror = "1"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
    "time",
] }
tracing-tree = "0.2"
