[package]
name = "echo_brpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
opentelemetry = "0.17.0"
protobuf = "3.0.2"
serde = "1.0.137"
serde_derive = "1.0.137"
server-kit = { path = "../../server-kit" }
server-kit-protocol = { path = "../../server-kit-protocol" }
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1.34"

[build-dependencies]
glob = "0.3.0"
protobuf-codegen = "3.0.2"
